# JobRadar

./: .gitignore  README.md
backend/: main.py  pyproject.toml
backend/app/: config.py  main.py  models.py  scraper.py
backend/app/routers/: jobs.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
